--- a/client/bin/build
+++ b/client/bin/build
@@ -315,10 +315,7 @@ let bundle = () => {
             console.log(warning.message)
         },
         plugins: [
-            nodeResolve({
-                jsnext: true,
-                module: true
-            }),
+            nodeResolve(),
             commonjs({
                 include: [
                     "rxjs/**",
