replace polyfill with corejs

--- a/client/bin/build
+++ b/client/bin/build
@@ -249,7 +249,6 @@ let copyFiles = () => {
                 "bootstrap",
                 "@fortawesome",
                 "zone.js",
-                "@babel/polyfill",
                 "typeface-nunito-sans",
             ]
 
@@ -334,7 +333,11 @@ let bundle = () => {
                     }, {})
             }),
             babel({
-                presets: ["@babel/preset-env"],
+                presets: ["@babel/preset-env", {
+                    corejs: 3,
+                    modules: false,
+                    useBuiltIns: "usage",
+                }],
                 plugins: ["@babel/plugin-external-helpers"],
                 include: path.join(client, "node_modules"),
                 babelrc: false,
