--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,12 @@
     "@angular/router": "8.2.14",
     "@babel/core": "7.7.5",
     "@babel/plugin-external-helpers": "7.7.4",
+    "@babel/polyfill": "7.7.0",
     "@babel/preset-env": "7.7.6",
     "@fortawesome/fontawesome-free": "5.12.0",
     "@ng-bootstrap/ng-bootstrap": "5.1.4",
     "bootstrap": "4.4.1",
     "chokidar": "3.3.1",
-    "core-js": "3.6.0",
     "fs-extra": "8.1.0",
     "glob": "7.1.6",
     "less": "3.10.3",
