--- a/client/package.json
+++ b/client/package.json
@@ -7,37 +7,38 @@
     "start": "node bin/build"
   },
   "dependencies": {
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/router": "8.2.14",
-    "@babel/core": "7.9.0",
-    "@babel/plugin-external-helpers": "7.8.3",
-    "@babel/polyfill": "7.8.7",
-    "@babel/preset-env": "7.9.0",
+    "@angular/common": "9.1.11",
+    "@angular/compiler": "9.1.11",
+    "@angular/compiler-cli": "9.1.11",
+    "@angular/core": "9.1.11",
+    "@angular/forms": "9.1.11",
+    "@angular/localize": "9.1.11",
+    "@angular/platform-browser": "9.1.11",
+    "@angular/platform-browser-dynamic": "9.1.11",
+    "@angular/router": "9.1.11",
+    "@babel/core": "7.10.2",
+    "@babel/plugin-external-helpers": "7.10.1",
+    "@babel/polyfill": "7.10.1",
+    "@babel/preset-env": "7.10.2",
     "@fortawesome/fontawesome-free": "5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "5.1.4",
-    "bootstrap": "4.4.1",
-    "chokidar": "3.3.1",
-    "fs-extra": "9.0.0",
+    "@ng-bootstrap/ng-bootstrap": "6.1.0",
+    "bootstrap": "4.5.0",
+    "chokidar": "3.4.0",
+    "eslint": "7.2.0",
+    "fs-extra": "9.0.1",
     "glob": "7.1.6",
-    "less": "3.11.1",
+    "less": "3.11.3",
     "less-plugin-autoprefix": "2.0.0",
     "minimist": "1.2.5",
-    "pug": "2.0.4",
+    "pug": "3.0.0",
     "reflect-metadata": "0.1.13",
-    "rollup": "2.1.0",
+    "rollup": "2.16.1",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rxjs": "6.5.4",
+    "rxjs": "6.5.5",
     "systemjs": "0.21.4",
-    "tslint": "6.1.0",
-    "typescript": "3.5.3",
-    "zone.js": "0.9.1"
+    "typescript": "3.8.3",
+    "zone.js": "0.10.3"
   }
 }
