--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,12 @@
     "@angular/router": "9.1.11",
     "@babel/core": "7.10.2",
     "@babel/plugin-external-helpers": "7.10.1",
-    "@babel/polyfill": "7.10.1",
     "@babel/preset-env": "7.10.2",
     "@fortawesome/fontawesome-free": "5.13.0",
     "@ng-bootstrap/ng-bootstrap": "6.1.0",
     "bootstrap": "4.5.0",
     "chokidar": "3.4.0",
+    "core-js": "3.6.5",
     "eslint": "7.2.0",
     "fs-extra": "9.0.1",
     "glob": "7.1.6",
@@ -32,6 +32,7 @@
     "minimist": "1.2.5",
     "pug": "3.0.0",
     "reflect-metadata": "0.1.13",
+    "regenerator-runtime": "0.13.5",
     "rollup": "2.16.1",
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-commonjs": "10.1.0",
