--- a/client/package.json
+++ b/client/package.json
@@ -8,39 +8,38 @@
     "postinstall": "ngcc"
   },
   "dependencies": {
-    "@angular/common": "9.1.11",
-    "@angular/compiler": "9.1.11",
-    "@angular/compiler-cli": "9.1.11",
-    "@angular/core": "9.1.11",
-    "@angular/forms": "9.1.11",
-    "@angular/localize": "9.1.11",
-    "@angular/platform-browser": "9.1.11",
-    "@angular/platform-browser-dynamic": "9.1.11",
-    "@angular/router": "9.1.11",
-    "@babel/core": "7.10.2",
-    "@babel/plugin-external-helpers": "7.10.1",
-    "@babel/preset-env": "7.10.2",
-    "@fortawesome/fontawesome-free": "5.13.0",
-    "@ng-bootstrap/ng-bootstrap": "6.1.0",
-    "bootstrap": "4.5.0",
-    "chokidar": "3.4.0",
-    "core-js": "3.6.5",
-    "eslint": "7.2.0",
-    "fs-extra": "9.0.1",
+    "@angular/common": "11.1.2",
+    "@angular/compiler": "11.1.2",
+    "@angular/compiler-cli": "11.1.2",
+    "@angular/core": "11.1.2",
+    "@angular/forms": "11.1.2",
+    "@angular/localize": "11.1.2",
+    "@angular/platform-browser": "11.1.2",
+    "@angular/platform-browser-dynamic": "11.1.2",
+    "@angular/router": "11.1.2",
+    "@babel/core": "7.12.13",
+    "@babel/plugin-external-helpers": "7.12.13",
+    "@babel/preset-env": "7.12.13",
+    "@fortawesome/fontawesome-free": "5.15.2",
+    "@ng-bootstrap/ng-bootstrap": "9.0.2",
+    "bootstrap": "4.6.0",
+    "chokidar": "3.5.1",
+    "core-js": "3.8.3",
+    "eslint": "7.19.0",
+    "fs-extra": "9.1.0",
     "glob": "7.1.6",
-    "less": "3.11.3",
+    "less": "4.1.1",
     "less-plugin-autoprefix": "2.0.0",
     "minimist": "1.2.5",
     "pug": "3.0.0",
     "reflect-metadata": "0.1.13",
-    "regenerator-runtime": "0.13.5",
-    "rollup": "2.16.1",
-    "rollup-plugin-babel": "4.4.0",
-    "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-node-resolve": "5.2.0",
-    "rxjs": "6.5.5",
+    "regenerator-runtime": "0.13.7",
+    "rollup": "2.38.5",
+    "@rollup/plugin-babel": "5.2.3",
+    "@rollup/plugin-node-resolve": "11.1.1",
+    "rxjs": "6.6.3",
     "systemjs": "0.21.4",
-    "typescript": "3.8.3",
-    "zone.js": "0.10.3"
+    "typescript": "4.1.4",
+    "zone.js": "0.11.3"
   }
 }
