--- a/client/package.json
+++ b/client/package.json
@@ -8,38 +8,39 @@
     "postinstall": "ngcc"
   },
   "dependencies": {
-    "@angular/common": "11.1.2",
-    "@angular/compiler": "11.1.2",
-    "@angular/compiler-cli": "11.1.2",
-    "@angular/core": "11.1.2",
-    "@angular/forms": "11.1.2",
-    "@angular/localize": "11.1.2",
-    "@angular/platform-browser": "11.1.2",
-    "@angular/platform-browser-dynamic": "11.1.2",
-    "@angular/router": "11.1.2",
-    "@babel/core": "7.12.13",
+    "@angular/common": "11.2.13",
+    "@angular/compiler": "11.2.13",
+    "@angular/compiler-cli": "11.2.13",
+    "@angular/core": "11.2.13",
+    "@angular/forms": "11.2.13",
+    "@angular/localize": "11.2.13",
+    "@angular/platform-browser": "11.2.13",
+    "@angular/platform-browser-dynamic": "11.2.13",
+    "@angular/router": "11.2.13",
+    "@babel/core": "7.14.3",
     "@babel/plugin-external-helpers": "7.12.13",
-    "@babel/preset-env": "7.12.13",
-    "@fortawesome/fontawesome-free": "5.15.2",
-    "@ng-bootstrap/ng-bootstrap": "9.0.2",
-    "bootstrap": "4.6.0",
+    "@babel/preset-env": "7.14.4",
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@ng-bootstrap/ng-bootstrap": "11.0.0-beta.1",
+    "@rollup/plugin-babel": "5.3.0",
+    "@rollup/plugin-commonjs": "19.0.0",
+    "@rollup/plugin-node-resolve": "13.0.0",
+    "bootstrap": "5.0.1",
     "chokidar": "3.5.1",
-    "core-js": "3.8.3",
-    "eslint": "7.19.0",
-    "fs-extra": "9.1.0",
-    "glob": "7.1.6",
+    "core-js": "3.13.1",
+    "eslint": "7.27.0",
+    "fs-extra": "10.0.0",
+    "glob": "7.1.7",
     "less": "4.1.1",
     "less-plugin-autoprefix": "2.0.0",
     "minimist": "1.2.5",
-    "pug": "3.0.0",
+    "pug": "3.0.2",
     "reflect-metadata": "0.1.13",
     "regenerator-runtime": "0.13.7",
-    "rollup": "2.38.5",
-    "@rollup/plugin-babel": "5.2.3",
-    "@rollup/plugin-node-resolve": "11.1.1",
-    "rxjs": "6.6.3",
+    "rollup": "2.50.5",
+    "rxjs": "6.6.7",
     "systemjs": "0.21.4",
-    "typescript": "4.1.4",
-    "zone.js": "0.11.3"
+    "typescript": "4.1.5",
+    "zone.js": "0.11.4"
   }
 }
